# troop

./: .gitignore  .impeccable.md  AGENTS.md  ARCHITECTURE_OVERVIEW.md  CLAUDE.md  README.md  memory.txt  product_idea.txt  repomix-output.xml  todo.txt
backend/: .env.example  .gitignore  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 3f1bfc747f3e_generate_tables.py  541e4ef0710e_add_agent_catalog_and_inheritance.py  7b66139f1c4a_add_orchestration_platform.py  8787521ec685_merge_branches.py  917914e3b0f7_merge_branches.py  9f8d7c6b5a4e_add_provider_health_and_model_matrix.py  a1b2c3d4e5f6_add_workspace_models.py  b2c3d4e5f6a7_add_run_event_tokens_and_eval_records.py  c3d4e5f60718_add_memory_and_knowledge_tables.py  d4e5f6a7b8c0_add_pgvector_chunk_embedding_column.py  e1f2a3b4c5d6_normalize_task_priority_normal.py  f5a6b7c8d9e0_add_task_response_sla_hours.py  g7h8i9j0k1l2_add_semantic_memory_entries.py  h8i9j0k1l2m3_memory_pipeline_extensions.py  i9j0k1l2m3n4_memory_episodic_archive_and_graph.py  j1k2l3m4n5o6_add_team_templates_table.py  k2l3m4n5o6p7_add_portfolio_execution_policies.py  l3m4n5o6p7q8_add_team_template_canvas_layout.py
backend/api/: main.py  router.py
backend/api/middleware/: correlation_id.py  csrf.py  public_rate_limit.py  request_logging.py  security_headers.py
backend/api/v1/: health.py
backend/core/: cache.py  config.py  error_handler.py  logging.py  rate_limit.py  schemas.py  security.py  storage.py  telemetry.py
backend/db/: session.py
backend/modules/admin/: router.py  schemas.py
backend/modules/ai/: models.py  providers.py  repository.py  router.py  schemas.py  service.py
backend/modules/audit/: models.py  (+1 more)
backend/tests/: test_langgraph_runner.py  test_orchestration_unit.py
backend/tools/: troop_cli.py
backend/workers/: __init__.py  celery_app.py  email.py  orchestration.py  tasks.py
(+226 files in other folders)
